--- a/homework-3-form-validation-hooks/src/components/Form/Form.css
+++ b/homework-3-form-validation-hooks/src/components/Form/Form.css
@@ -17,6 +17,10 @@
   margin: 0;
 }
 
+.field:not(:last-of-type) {
+  padding-bottom: 12px;
+}
+
 .field__label {
   width: 90px;
   display: inline-block;
@@ -39,9 +43,7 @@
 .field__error {
   display: block;
   height: 13px;
-  padding: 2px 0 5px 90px;
-  padding-bottom: 5px;
-  padding-left: 90px;
+  padding: 2px 0 0 90px;
 }
 
 .field-error {
